Aulas - CalculadoraPessoal - CalculadoraAula - Pokedex

--- a/Projetos/Calculadora_Pessoal/index.html
+++ b/Projetos/Calculadora_Pessoal/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
     <link rel="stylesheet" type="text/css" href="assets\css\style.css">
-    <script type="text/script" src="assets/js/script.js"></script>
+    <script src="assets/js/script.js" defer></script>
 </head>
 <body>
     <main id="calculator-body">
@@ -15,8 +15,8 @@
             <div id="result-icon">=</div>
 
             <div id="display">
-                <div id="last-operation">last operation</div>
-                <div id="result">resultado</div>
+                <div id="last-operation"></div>
+                <div id="result"></div>
             </div>
 
         </div>
@@ -24,36 +24,36 @@
         <div id="calculator-buttons">
 
             <div class="row-buttons">
-                <button class="normal-button" value="">AC</button>
+                <button class="normal-button" value="">CE</button>
                 <button class="normal-button" value="">+-</button>
                 <button class="normal-button" value="">%</button>
-                <button class="orange-button" value="">/</button>
+                <button class="orange-button" value="/">/</button>
             </div>
 
             <div class="row-buttons">
                 <button class="normal-button" value="7">7</button>
                 <button class="normal-button" value="8">8</button>
                 <button class="normal-button" value="9">9</button>
-                <button class="orange-button" value="">X</button>
+                <button class="orange-button" value="*">x</button>
             </div>
 
             <div class="row-buttons">
                 <button class="normal-button" value="4">4</button>
                 <button class="normal-button" value="5">5</button>
                 <button class="normal-button" value="6">6</button>
-                <button class="orange-button" value="">-</button>
+                <button class="orange-button" value="-">-</button>
             </div>
 
             <div class="row-buttons">
                 <button class="normal-button" value="1">1</button>
                 <button class="normal-button" value="2">2</button>
                 <button class="normal-button" value="3">3</button>
-                <button class="orange-button" value="">+</button>
+                <button class="orange-button" value="+">+</button>
             </div>
 
             <div class="row-buttons-last">
                 <button class="zero-button" value="">0</button>
-                <button class="normal-button" value="">,</button>
+                <button class="normal-button" value="">.</button>
                 <button class="orange-button">=</button>
             </div>
 
