--- a/Projetos/Pokedex/index.html
+++ b/Projetos/Pokedex/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets/style/style.css">
     <link rel="stylesheet" type="text/css" href="assets/style/index.css">
+    <script src="script/index.js" defer></script>
     <title>Pokedex</title>
 </head>
 <body>
@@ -23,13 +24,13 @@
                     </button>
                 </div>
 
-               <button id="surprise-me-button"></button>
+               <button id="surprise-me-button"><span>Pokemon Surpresa!</span></button>
             </div>
             <div id="news-panel"></div>
 
         </div>
         <div id="inferior-panel">
-            <div class="pokemon-card">
+            <div class="pokemon-card" id="pokemon-card-1">
                 <img class="pokemon-card-image" src="assets/img/004.png">
                 <div class="pokemon-card-infos">
                     <h2>Pokemon Name</h2>
@@ -40,7 +41,7 @@
                     </div>
                 </div>
             </div>
-            <div class="pokemon-card">
+            <div class="pokemon-card" id="pokemon-card-2">
                 <img class="pokemon-card-image" src="assets/img/004.png">
                 <div class="pokemon-card-infos">
                     <h2>Pokemon Name</h2>
