Cards dinamicos do Index

--- a/Projetos/Pokedex/index.html
+++ b/Projetos/Pokedex/index.html
@@ -31,24 +31,20 @@
         </div>
         <div id="inferior-panel">
             <div class="pokemon-card" id="pokemon-card-1">
-                <img class="pokemon-card-image" src="assets/img/004.png">
+                <img class="pokemon-card-image" src="">
                 <div class="pokemon-card-infos">
-                    <h2>Pokemon Name</h2>
-                    <p class="pokemon-card-pokedex-number">Nº XXX</p>
+                    <h2 class="pokemon-name"></h2>
+                    <p class="pokemon-card-pokedex-number"></p>
                     <div class="pokemon-card-types">
-                        <div class="card-type"></div>
-                        <div class="card-type"></div>
                     </div>
                 </div>
             </div>
             <div class="pokemon-card" id="pokemon-card-2">
-                <img class="pokemon-card-image" src="assets/img/004.png">
+                <img class="pokemon-card-image" src="">
                 <div class="pokemon-card-infos">
-                    <h2>Pokemon Name</h2>
-                    <p class="pokemon-card-pokedex-number">Nº XXX</p>
+                    <h2 class="pokemon-name"></h2>
+                    <p class="pokemon-card-pokedex-number"></p>
                     <div class="pokemon-card-types">
-                        <div class="card-type"></div>
-                        <div class="card-type"></div>
                     </div>
                 </div>
             </div>
