Finalização de PokeDex. Totalmente funcional

--- a/Projetos/Pokedex/index.html
+++ b/Projetos/Pokedex/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets/style/style.css">
     <link rel="stylesheet" type="text/css" href="assets/style/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="assets/img/icon/pokedex-icon-21.jpg">
     <script src="script/index.js" defer></script>
-    <title>Pokedex</title>
+    <title>PokeDex</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="assets/img/pokedexTitle.webp">
+    </header>
     <main>
         <div id="superior-panel">
             <div id="search-panel">
@@ -51,6 +55,8 @@
         </div>
 
     </main>
-    <footer></footer>
+    <footer>Copyright © 2023 Pokedex. Todos os direitos reservados.
+        Este site é um projeto de<a href="https://github.com/keilertrindade/" target="_blank">&nbsp;Keiler Trindade&nbsp;</a>e não está afiliado à The Pokemon Company.
+    </footer>
 </body>
 </html>
