--- a/Projetos/Pokedex/index.html
+++ b/Projetos/Pokedex/index.html
@@ -30,7 +30,7 @@
 
                <button id="surprise-me-button"><span>Pokemon Surpresa!</span></button>
             </div>
-            <div id="news-panel"></div>
+            <!-- <div id="news-panel"></div> -->
 
         </div>
         <div id="inferior-panel">
